@@ -35,6 +35,7 @@ package ifneeded Theme           1.0 [list source [file join $dir Theme.tcl]]
 package ifneeded TheServer       1.0 [list source [file join $dir TheServer.tcl]]
 package ifneeded Types           1.0 [list source [file join $dir Types.tcl]]
 package ifneeded UI              1.0 [list source [file join $dir UI.tcl]]
+package ifneeded UI::TSearch     1.0 [list source [file join $dir TSearch.tcl]]
 package ifneeded UI::WSearch     1.0 [list source [file join $dir WSearch.tcl]]
 package ifneeded UserActions     1.0 [list source [file join $dir UserActions.tcl]]
 package ifneeded Utils           1.0 [list source [file join $dir Utils.tcl]]
